--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.idea/
+
 # Logs
 logs
 *.log
@@ -92,7 +94,7 @@ out
 dist
 
 # Gatsby files
-.cache/
+#.cache/
 # Comment in the public line in if your project uses Gatsby and not Next.js
 # https://nextjs.org/blog/next-9-1#public-directory-support
 # public
@@ -102,7 +104,7 @@ dist
 
 # vuepress v2.x temp and cache directory
 .temp
-.cache
+#.cache
 
 # Docusaurus cache and generated files
 .docusaurus
